<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kevdub.moneytracker.MainActivity"
    android:background="#000000" >

    <android.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#111111"
        android:titleTextColor="@color/white">
    </android.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#111111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:tabMode="fixed"
        app:tabTextColor="@color/hint"
        app:tabSelectedTextColor="#B2BABB"
        app:tabIndicatorColor="#B2BABB"
        >
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        >
    </android.support.v4.view.ViewPager>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list_card"
        card_view:layout_constraintTop_toBottomOf="@+id/pager"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        card_view:cardCornerRadius="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="@color/activityBackground"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/monthText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/month_placeholder"
                android:textSize="18sp"
                android:textColor="@color/dateTextColor"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="#111111"
                android:clickable="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintEnd_toEndOf="@id/monthText"
                card_view:layout_constraintTop_toTopOf="@id/monthText"
                card_view:layout_constraintBottom_toBottomOf="@id/monthText"
                android:layout_marginEnd="10dp"
                android:text="@string/month_change"
                android:textSize="14sp"
                android:textColor="@color/hint"
                />

            <ListView
                android:id="@+id/log"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                card_view:layout_constraintTop_toBottomOf="@id/monthText"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:paddingBottom="72dp"
                android:clipToPadding="false"
                >
            </ListView>

            <TextView
                android:id="@+id/emptyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@id/monthText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/empty_list_text"
                android:textSize="18sp"
                android:textColor="@color/hint"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/fab_margin"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/fab_margin"
        app:backgroundTint="@color/colorFAB"
        android:src="@drawable/ic_attach_money_white_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/fab_2"
        app:backgroundTint="@color/colorFAB"
        app:fabSize="mini"
        android:layout_marginBottom="16dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/fab_2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/fab_2"
        android:visibility="invisible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_remove_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:backgroundTint="@color/colorFAB"
        app:fabSize="mini"
        android:layout_marginBottom="16dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toRightOf="@+id/fab"
        app:layout_constraintLeft_toLeftOf="@+id/fab"
        android:visibility="invisible"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>
